--- a/NextStats/Info.plist
+++ b/NextStats/Info.plist
@@ -58,5 +58,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array><string>org-appextension-feature-password-management</string></array>
 </dict>
 </plist>
